package humans;

public enum Emotions{
	STUPOR,
	COURAGE
}