package humans;

import weapons.*;

interface TakeWeapon{
	void takeWeapon(Weapons weapon);
}