package interfaces;
import interactionWithPoliceman.Emotions;
public interface Feel{
    void feel(Emotions e);
}
