package interfaces;
import interactionWithPoliceman.Sound;
public interface Hear {
    void hear(Sound s);
}
