package interfaces;

import interactionWithPoliceman.Hallucinations;

public interface See {
    void see(Hallucinations h);
}
