package things;

public class Figurine{
  private String place;

  public void setPlace(String place){
    this.place = place;
    System.out.println("The figurine is " + place);
  }

}