package things;

public class Gallows{
  private int amount = 10;

  public int getAmount(){
  	return amount;
  }

  public void locate(){
  	System.out.println(amount + " gallows are arranged in a circle");
  }
}