package world;
public enum Locations{
   SWAMP,
   POLICE_STATION
}